# glawt

./: .gitignore  Doxyfile  Makefile.in  autogen.sh  config.in  configure.ac  functions.mak  glawt.pc.in  globals.mak  make-globals.mak  make-module.mak  makefile
app/: makefile  module.mak
app/backend/: makefile
app/client/: makefile
app/data/: makefile
app/frontend/: makefile
app/graph/: makefile
app/src/: Application.hpp
app/traits/: makefile
applets/: AxisAlignedPlane.java  AxisAlignedSlab.java  BoundingBox.java  ButtonPanel.java  DashedStroke.java  DataSource.java  Display.java  DisplayFrame.java  DisplayPanel.java  DottedStroke.java  Drawable.java  HitRecord.java  InputPanel.java  Intersection.java  IntersectionPair.java  IntersectionRecord.java  Point.java  Quadtree.java  QuadtreeAppletPanel.java  QuadtreeAppletSidePanel.java  QuadtreeBuilder.java  QuadtreeNode.java  Ray.java  Shape.java  Square.java  Vector2D.java  Volume.java  VolumeData.java
applets/IterativeQuadtreeApplet/: .project  BasicDrawable.java  BoundingBox.java  BoundsCheck.java  InputPanel.java  Intersection.java  JArraySpinner.java  NodeIndex.java  Quadtree.java  Shape.java  Vector2D.java  VolumeData.java
applets/QuadtreeApplet/: .project  AxisAlignedPlane.java  AxisAlignedSlab.java  BoundingBox.java  BoundsCheck.java  DashedStroke.java  DisplayFrame.java  DisplayPanel.java  DottedStroke.java  Drawable.java  InputPanel.java  Intersection.java  IntersectionPair.java  JArraySpinner.java  JNumberSpinner.java  NodeIndex.java  Point.java  Quadtree.java  QuadtreeApplet.java  QuadtreeAppletPanel.java  QuadtreeAppletScene.java  QuadtreeAppletSidePanel.java  QuadtreeBuilder.java  QuadtreeNode.java  QuadtreeTexture.java  QuadtreeViewer.java  Ray.java  RayTimePair.java  Shape.java  Square.java  TreeNode.java  Volume.java  VolumeData.java  install
applets/html/: QuadtreeApplet.html
backend/: makefile
backend/src/: Cameraman.cpp  Cameraman.hpp  Command.hpp  Compositor.hpp  Director.hpp  Grip.hpp  Interpreter.hpp  Parser.cpp  Parser.hpp  Producer.cpp  Producer.hpp  Tag.hpp
core/: makefile
core/src/: Box.hpp  Identifiable.hpp  Item.hpp  Matrix.hpp  Node.hpp  Outline.hpp  Quaternion.hpp  Scene.hpp  Shader.hpp  Translation.hpp  Uniform.hpp  Vector.cpp  Vector.hpp
design/: .gitignore  explode.py  layers.xml  layers2.xml  raycaster-try.frag  raycaster-try.xml  shadow.xml  step-test.py  target.xml  xor.py
doc/: Doxyfile  Makefile.in  doxyfile  doxygen.css  makefile
frontend/: makefile
frontend/src/: Application.hpp  Control.hpp  Keyboard.hpp  Manipulator.hpp  Menu.hpp  Mouse.cpp  Translator.hpp
glsl/: BoundaryTimes.glsl  BoundingBox.glsl  Colors.glsl  OctreeNode.glsl  Ray.glsl  ScalerX.xml  ScalerY.xml  ScalerZ.xml  Target.glsl  TranslatorX.xml  TranslatorY.xml  TranslatorZ.xml  Volume.glsl  basic.frag  basic.vert  basic.xml  brightness.glsl  clip.xml  color.frag  color.vert  color.xml  coordinates.frag  coordinates.glsl  coordinates.vert  coordinates.xml  cull.xml  discard.frag  discard.vert  discard.xml  double.xml  float-results.frag  float.frag  float.vert  float.xml  fullscreen.xml  halfmoon-vars.glsl  halfmoon.frag  halfmoon.glsl  halfmoon.vert  halfmoon.xml  (+79 more)
input/: .gitignore  BoundaryTimes.glsl  BoundingBox.glsl  Colors.glsl  Octree.glsl  OctreeNode.glsl  Ray.glsl  basic.frag  basic.vert  basic.xml  coordinates.frag  coordinates.vert  coordinates.xml  cull.xml  double.xml  fullscreen.xml  halfmoon.xml  items.txt  kruger.frag  kruger.xml  lighting.xml  multitexture.frag  multitexture.vert  multitexture.xml  octree.frag  octree.xml  raycaster-lit.xml  raycaster-new.xml  raycaster.xml  raycasternew.xml  raydirection-new.xml  raydirection.xml  raydirectionnew.xml  sampler.xml  scene.xml  shader.xml  texture-size.frag  texture-size.xml  texture.frag  texture.vert  (+8 more)
src/: .gitignore  Application.cpp  Application.hpp  Binding.cpp  Binding.hpp  Box.cpp  Box.hpp  Cameraman.cpp  Cameraman.hpp  Command.cpp  Command.hpp  Commands.hpp  Compositor.cpp  Compositor.hpp  Control.cpp  Control.hpp  Controls.cpp  Controls.hpp  Delegate.hpp  Director.cpp  Director.hpp  Display.cpp  Display.hpp  Gander.cpp  Gander.cxx  Gander.hpp  Grip.cpp  Grip.hpp  Identifiable.hpp  Interpreter.cpp  Interpreter.hpp  Item.cpp  Item.hpp  Keyboard.cpp  Keyboard.hpp  Makefile.in  Manipulator.cpp  Manipulator.hpp  Matrix.cpp  Matrix.hpp  (+35 more)
src/advanced/: .gitignore  AdvancedFactory.cpp  AdvancedFactory.cxx  AdvancedFactory.hpp  Attachment.cpp  Attachment.cxx  Attachment.hpp  Bind.cpp  Bind.hpp  Bind.xml  Blend.cpp  Blend.cxx  Blend.hpp  Blend.xml  Boolean.cpp  Boolean.cxx  Boolean.hpp  Boolean.xml  BooleanAnd.cpp  BooleanAnd.cxx  BooleanAnd.hpp  BooleanAnd.xml  BooleanXor.cpp  BooleanXor.cxx  BooleanXor.hpp  BooleanXor.xml  Branch.cpp  Branch.hpp  Choose.cpp  Choose.hpp  Clear.cpp  Clear.hpp  Clone.cpp  Clone.hpp  Clone.xml  Cull.cpp  Cull.cxx  Cull.hpp  Cull.xml  Depth.cpp  (+60 more)
src/backend/: .gitignore  Cameraman.cpp  Cameraman.hpp  Command.cpp  Command.cxx  Command.hpp  Compositor.cpp  Compositor.hpp  Delegate.cxx  Delegate.hpp  Director.cpp  Director.hpp  Factory.cpp  Factory.hpp  Grip.cpp  Grip.hpp  Interpreter.cpp  Interpreter.cxx  Interpreter.hpp  Parser.cpp  Parser.cxx  Parser.hpp  Producer.cpp  Producer.cxx  Producer.hpp  Producer.xml  Tag.cpp  Tag.hpp  Worker.hpp  makefile
src/base/: .gitignore  Drawable.cxx  Drawable.hpp  Factory.cpp  (+19 more)
test/: Makefile.in
textures/: .gitignore  brain128.vlb  bunny128.vlb  chunk.txt  chunk.vlb  empty.txt  empty.vlb  head128.vlb
ui/: ScaleX.xml  ScaleY.xml  ScaleZ.xml  TranslateX.xml  TranslateY.xml  TranslateZ.xml  light-widget.frag  light-widget.vert  light-widget.xml  outline.frag  outline.vert  outline.xml  pick.frag  pick.vert  pick.xml  shadow-cast.frag  shadow-cast.vert  shadow-cast.xml
win/: build-glew.txt  build-gtkgl.txt  build-gtkglmm.txt  get-glew.bat  get-gtk.bat  get-gtkgl.bat  get-mingw.bat  get-msys.bat  install-gtk.bat  install-mingw.bat  install-msys.bat  install.bat  package.bat  postbuild.bat  postinstall-gtk.txt  postinstall-mingw.txt  postinstall-msys.txt
(+916 files in other folders)
